update team page with new members, fixed alignment issues

--- a/frontend/src/Pages/Team/TeamPage.styles.css
+++ b/frontend/src/Pages/Team/TeamPage.styles.css
@@ -132,3 +132,11 @@
       margin: -0.6em 0 0 1em;
    }
 }
+
+@media(max-width: 350px)
+{
+   .officer-img {
+      width: 250px;
+      height: 250px;
+   }
+}
